# travelling-salesman-problem

./: .gitignore  CMakeLists.txt  README.md  main.c  profile.py  report.py  utils.cmake
abstract/: readme.md
c/: CMakeLists.txt  main.c
c/src/: exception.c  exception.h  graph.c  graph.h  loader.c  loader.h  memory.c  memory.h  path.c  path.h  permutation.c  permutation.h  solver.c  solver.h  state.h  utils.c  utils.h
c/src/solvers/: solver_openmp.c  solver_openmp.h  solver_pthreads.c  solver_pthreads.h  solver_seq.c  solver_seq.h
c/src/states/: state_duration_test.c  state_duration_test.h  state_simple_comparison.c  state_simple_comparison.h
cpp/: CMakeLists.txt  main.cpp
cpp/src/: Graph.hpp  Loader.hpp  ParallelSolver.hpp  Runner.hpp  Solver.hpp  State.hpp  Timer.hpp
cpp/src/solvers/: OpenMPSolver.hpp  SequentialSolver.hpp  ThreadSolver.hpp
cpp/src/states/: ComparisonState.hpp  DurationTestState.hpp
cpp/src/timers/: OpenMPTimer.hpp
input/: 10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
mpi/: CMakeLists.txt  main.cpp
mpi/src/: MPILoader.hpp  MPIRunner.hpp  MPISolver.hpp  MPITimer.hpp
tests/: .gitignore
